fixed all logs namespace and made label senario a flow and output

--- a/charts/rancher-logging-example/templates/senarios/logs-by-label.yaml
+++ b/charts/rancher-logging-example/templates/senarios/logs-by-label.yaml
@@ -1,21 +1,21 @@
 apiVersion: logging.banzaicloud.io/v1beta1
-kind: ClusterFlow
+kind: Flow
 metadata:
   name: log-generator-app
   labels:
   {{- include "rancher-logging-example.labels" . | nindent 4 }}
 spec:
-  globalOutputRefs:
-    - log-generator
+  localOutputRefs:
+    - log-generator-app
   match:
     - select:
         labels:
           rancher.logging.example/app: log-generator
 ---
 apiVersion: logging.banzaicloud.io/v1beta1
-kind: ClusterOutput
+kind: Output
 metadata:
-  name: log-generator
+  name: log-generator-app
   labels:
   {{- include "rancher-logging-example.labels" . | nindent 4 }}
 spec:
@@ -23,4 +23,4 @@ spec:
     host: elasticsearch-master.{{.Release.Namespace}}.svc
     port: 9200
     scheme: http
-    index_name: log-generator
+    index_name: log-generator-app
