--- a/charts/rancher-logging-example/templates/senarios/all-logs.yaml
+++ b/charts/rancher-logging-example/templates/senarios/all-logs.yaml
@@ -2,16 +2,18 @@ apiVersion: logging.banzaicloud.io/v1beta1
 kind: ClusterFlow
 metadata:
   name: all-logs
+  namespace: cattle-logging-system
   labels:
     {{- include "rancher-logging-example.labels" . | nindent 4 }}
 spec:
   globalOutputRefs:
-    - all-logs-index
+    - all-logs
 ---
 apiVersion: logging.banzaicloud.io/v1beta1
 kind: ClusterOutput
 metadata:
   name: all-logs
+  namespace: cattle-logging-system
   labels:
   {{- include "rancher-logging-example.labels" . | nindent 4 }}
 spec:
