--- a/charts/rancher-logging-example/values.yaml
+++ b/charts/rancher-logging-example/values.yaml
@@ -44,9 +44,14 @@ resources:
      cpu: 100m
      memory: 20Mi
 
-nodeSelector: {}
+nodeSelector:
+  kubernetes.io/os: linux
 
-tolerations: []
+tolerations:
+  - key: cattle.io/os
+    operator: "Equal"
+    value: "linux"
+    effect: NoSchedule
 
 affinity: {}
 
@@ -55,4 +60,11 @@ elasticsearch:
     enabled: false
   replicas: 1
   minimumMasterNodes: 1
+  nodeSelector:
+    kubernetes.io/os: linux
+  tolerations:
+    - key: cattle.io/os
+      operator: "Equal"
+      value: "linux"
+      effect: NoSchedule
 
