dropped es in favor of our own output

--- a/charts/rancher-logging-example/charts/log-generator/Chart.yaml
+++ b/charts/rancher-logging-example/charts/log-generator/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: rancher-logging-example
+name: log-generator
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -22,9 +22,3 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
-
-dependencies:
-  - name: log-generator
-    version: 0.1.0
-  - name: log-output
-    version: 0.1.0
