--- a/charts/rancher-logging-example/charts/log-generator/templates/deployment.yaml
+++ b/charts/rancher-logging-example/charts/log-generator/templates/deployment.yaml
@@ -1,14 +1,14 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "simple-application.fullname" . }}
+  name: {{ include "log-generator.fullname" . }}
   labels:
-    {{- include "simple-application.labels" . | nindent 4 }}
+    {{- include "log-generator.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      {{- include "simple-application.selectorLabels" . | nindent 6 }}
+      {{- include "log-generator.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -16,13 +16,12 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "simple-application.selectorLabels" . | nindent 8 }}
+        {{- include "log-generator.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "simple-application.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
