--- a/charts/rancher-logging-example/templates/senarios/logs-by-label.yaml
+++ b/charts/rancher-logging-example/templates/senarios/logs-by-label.yaml
@@ -19,8 +19,7 @@ metadata:
   labels:
   {{- include "rancher-logging-example.labels" . | nindent 4 }}
 spec:
-  elasticsearch:
-    host: elasticsearch-master.{{.Release.Namespace}}.svc
-    port: 9200
-    scheme: http
-    index_name: log-generator-app
+  http:
+    endpoint: http://{{ .Release.Name }}-log-output.{{ .Release.Namespace }}.svc/log-generator-app/
+    buffer:
+      flush_interval: 10s
