--- a/charts/rancher-logging-example/templates/senarios/namespace-logs.yaml
+++ b/charts/rancher-logging-example/templates/senarios/namespace-logs.yaml
@@ -19,3 +19,4 @@ spec:
     endpoint: http://{{ .Release.Name }}-log-output.{{ .Release.Namespace }}.svc/{{ .Release.Namespace }}-namespace/
     buffer:
       flush_interval: 10s
+      flush_mode: interval
