--- a/charts/rancher-logging-example/templates/senarios/logs-by-label.yaml
+++ b/charts/rancher-logging-example/templates/senarios/logs-by-label.yaml
@@ -23,3 +23,4 @@ spec:
     endpoint: http://{{ .Release.Name }}-log-output.{{ .Release.Namespace }}.svc/log-generator-app/
     buffer:
       flush_interval: 10s
+      flush_mode: interval
